Fixing z-index 2

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -56,7 +56,7 @@ body {
     position: absolute;
     transform: translate(-50%, -50%);
     left: 50%;
-    z-index: 1;
+    z-index: 2;
     border: none;
     width: 85%;
     display: none;
@@ -117,6 +117,8 @@ body {
   }
   .card {
     @include card();
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     row-gap: 10px;
